fix: align additional search form

--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -30,8 +30,8 @@
 }
 .inp {
   position: absolute;
-  top: 13px;
-  left: 100px;
+  top: 32px;
+  left: 200px;
 }
 /* iq-developer */
 .authorization {
